# scene-sense

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.cache/realism/: fame_cache.json
data/eval/: lia_gold_lb.json
data/samples/: Gladiator.json  Legally_Blonde.json  The_Devils_Advocate.json
docs/: README.md
docs/archive/: lb_realism_cards.md
docs/meeting-notes/: 2026-04-30-ux-working-session.md  2026-05-05-scenesense-planning.md  2026-05-06-hackathon-discussion.md  2026-05-07-hackathon-scoping.md
docs/prds/: 00-scenesense-master.md  01-content-intelligence.md  02-client-experience.md  03-monetization.md  04-sceneiq.md  99-interactive-pause-baseline.md
docs/research/: competitive-landscape.md  eval-strategy.md  lb_sceneHRIT_v2.md  lb_viral_top25.md  legal-considerations.md  opportunity-sizing.md
docs/schema/: prompt-output.md  tubi-moments.md
docs/use-cases/: architecture-overview.md  generators-runbook.md  how-real-is-it.md  primitive-catalog.md  trivia-architecture.md
docs/use-cases/slide-assets/: sceneiq_architecture_v10.html  sceneiq_architecture_v11.html  sceneiq_concrete_deck_v14.html  sceneiq_deck.html  slide_1.html  (+9 more)
docs/vision/: platform-walkthroughs.md  tubix-exec-summary.md
scripts/: README.md  eval_outputs.py  finalize.py  generate_cast_enriched.py  generate_facts.py  generate_hriv2.py  generate_realism.py  generate_tier0.py  generate_trivia.py  measure_lia_agreement.py  run_all.py
src/scene_sense/: __init__.py
tests/: test_cli.py  test_demo_bundle.py  test_ui_schema_contract.py
(+40 files in other folders)
