[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scene-sense"
version = "0.1.0"
description = "SceneSense / SceneIQ — CTV scene-aware engagement layer. VLM scene JSON → validated, client-ready pause-screen prompts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Rahul Rao" }]
keywords = ["ctv", "tubi", "scene-intelligence", "pause-ad", "llm"]

dependencies = [
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "tenacity>=8.2.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pandas>=2.1.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.50.0",
    "google-genai>=0.3.0",
    "youtube-transcript-api>=0.6.2",
]
databricks = [
    "databricks-sql-connector>=3.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
scene-sense = "scene_sense.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scene_sense = ["demo/*.json", "demo/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
